[tool.poetry]
name = "eye-tracking"
version = "0.1.0"
description = "Eye Tracking Project"
authors = ["Nizar AGOUGILE, Fabien GAUTIER"]
license = "MIT"
readme = "README.md"

packages = [{ include = "eyetracking", from = "src" }]

[tool.poetry.scripts]
track-eye = "eyetracking.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
opencv-python = "^4.10.0.84"
imutils = "^0.5.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
poethepoet = "^0.27.0"
pylint = "^3.2.6"
black = "^24.8.0"


[tool.poe.tasks]
lint = "pylint ./src/"
typecheck = "python -m mypy ./src/ --disallow-untyped-defs"
check_format = "black --check ./src/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
